--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install hugo
+      
+      - name: Set up build branch
+        run: git worktree add build build
 
       - name: Build website
         run: |
@@ -31,4 +34,4 @@ jobs:
           git config user.email "<>"
           git add build
           git commit -m "build $GITHUB_REF"
-          git subtree push --force --prefix build origin build
+          git push origin build
