--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "<>"
-          git add -f build
+          cd build
+          git add --all
           git commit -m "build $GITHUB_REF"
           git push origin build
