make cleaner builds, add favicon

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           git fetch
           git worktree add build build
+          rm -r build/*
 
       - name: Build website
         run: |
